--- a/ecommerce.html
+++ b/ecommerce.html
@@ -24,13 +24,13 @@
       <input type="checkbox" id="check-menu" />
       <label for="check-menu" class="menu"
         ><i class="bx bx-menu bx-border"></i></label
-      ><img src="Media/Logo.PNG" width="70" />
+      ><img src="Media/logo1.PNG" width="70" />
       <ul>
-        <li class="nav-item active"><a href="index.html#Inicio">Inicio</a></li>
-        <li class="nav-item"><a href="index.html#Vivero">Vivero</a></li>
-        <li class="nav-item"><a href="index.html#Tienda">Tienda</a></li>
-        <li class="nav-item"><a href="index.html#Servicios">Servicios</a></li>
-        <li class="nav-item"><a href="index.html#Contacto">Contacto</a></li>
+        <li class="nav-item active"><a href="index.html#inicio">Inicio</a></li>
+        <li class="nav-item"><a href="index.html#vivero">Vivero</a></li>
+        <li class="nav-item"><a href="index.html#tienda">Tienda</a></li>
+        <li class="nav-item"><a href="index.html#servicios">Servicios</a></li>
+        <li class="nav-item"><a href="index.html#contacto">Contacto</a></li>
       </ul>
     </nav>
 
@@ -61,11 +61,11 @@
   </main>
     <footer class="navbar" align-items="center"> 
       <ul>
-        <li class="nav-item active"><a href="index.html#Inicio">Inicio</a></li>
-        <li class="nav-item"><a href="index.html#Vivero">Vivero</a></li>
-        <li class="nav-item"><a href="index.html#Tienda">Tienda</a></li>
-        <li class="nav-item"><a href="index.html#Servicios">Servicios</a></li>
-        <li class="nav-item"><a href="index.html#Contacto">Contacto</a></li>
+        <li class="nav-item active"><a href="index.html#inicio">Inicio</a></li>
+        <li class="nav-item"><a href="index.html#vivero">Vivero</a></li>
+        <li class="nav-item"><a href="index.html#tienda">Tienda</a></li>
+        <li class="nav-item"><a href="index.html#servicios">Servicios</a></li>
+        <li class="nav-item"><a href="index.html#contacto">Contacto</a></li>
       </ul>
       <span>Ruta 119, km. 32.2, C.P.: 3460 | Curuzú Cuatiá, Corrientes, Argentina. <br>2023 Vivero La Chichy. All Rights Reserved </C></span>
     </footer>
