--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     <nav class="navbar"> <!--Menú de navegación - los links de este navbar dirigen a contenidos internos del index.html vía ID-->
       <input type="checkbox" id="check-menu">
       <label for="check-menu" class="menu"><i class='bx bx-menu bx-border'></i></label>
-      <img src="media/logo.PNG" width="70" />
+      <img src="media/logo1.PNG" width="70" />
       <ul>
-        <li class="nav-item active"><a href="index.html#Inicio">Inicio</a></li>
-        <li class="nav-item"><a href="index.html#Vivero">Vivero</a></li>
-        <li class="nav-item"><a href="index.html#Tienda">Tienda</a></li>
-        <li class="nav-item"><a href="index.html#Servicios">Servicios</a></li>
-        <li class="nav-item"><a href="index.html#Contacto">Contacto</a></li>
+        <li class="nav-item active"><a href="index.html#inicio">Inicio</a></li>
+        <li class="nav-item"><a href="index.html#vivero">Vivero</a></li>
+        <li class="nav-item"><a href="index.html#tienda">Tienda</a></li>
+        <li class="nav-item"><a href="index.html#servicios">Servicios</a></li>
+        <li class="nav-item"><a href="index.html#contacto">Contacto</a></li>
       </ul>
     </nav>
 
-    <header id="Inicio">
+    <main id="inicio">
 
     <!--Código del carrusel desde bootstrap-->
       <section id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
@@ -56,9 +56,9 @@
 <!--Cierre del código del carrusel desde bootstrap-->
 
       <p class="titulo-header">Todo para tu jardín, en un solo lugar</p>
-    </header>
+    </main>
 
-    <section id="Vivero"> <!-- Primera de las 4 secciones en index.html - Sus links dirigen a la página vivero.html y a IDs dentro de esta página -->
+    <section id="vivero"> <!-- Primera de las 4 secciones en index.html - Sus links dirigen a la página vivero.html y a IDs dentro de esta página -->
       <h2><a href="vivero.html">Vivero</a></h2>
       <article>
         <div>
@@ -74,10 +74,10 @@
           <h3><a href="vivero.html#fertilizantes-y-otro-insumos">Fertilizantes y otros insumos</a></h3>
         </div>
       </article>
-      <article class="boton-inicio"><a href="index.html#Inicio">🔼 Inicio</a></article>
+      <article class="boton-inicio"><a href="index.html#inicio">🔼 Inicio</a></article>
     </section>
 
-    <section id="Tienda"> <!--Segunda de las 4 secciones en index.html - Sus links dirigen a la página tienda.html y a IDs dentro de esta página -->
+    <section id="tienda"> <!--Segunda de las 4 secciones en index.html - Sus links dirigen a la página tienda.html y a IDs dentro de esta página -->
       <h2><a href="tienda.html">Tienda</a></h2>
       <article>
         <div>
@@ -89,13 +89,13 @@
           <h3><a href="tienda.html#herramientas">Herramientas</h3></a>
         </div>
       </article>
-      <article class="boton-inicio"><a href="index.html#Inicio">🔼 Inicio</a></article>
+      <article class="boton-inicio"><a href="index.html#inicio">🔼 Inicio</a></article>
     </section>
 
-    <section id="Servicios"> <!-- Tercera de las 4 secciones en index.html - No contiene links -->
+    <section id="servicios"> <!-- Tercera de las 4 secciones en index.html - No contiene links -->
       <h2>Servicios</h2>
       <article>
-        <div class="Servicios">
+        <div class="servicios">
           <div class="icon-serv"><i class='bx bx-landscape'></i></div>
           <h3>Paisajismo</h3>
           <p>
@@ -106,7 +106,7 @@
             El mantenimiento es una parte clave de este servicio. Esto incluye la poda, fertilización y control de plagas, así como también la limpieza y la eliminación de escombros. El mantenimiento regular ayuda a mantener el aspecto y la salud de las plantas y el paisaje en general.
           </p>
         </div>
-        <div class="Servicios"> 
+        <div class="servicios"> 
           <div class="icon-serv"><i class='bx bxs-comment-dots icon-serv'></i></div>
           <h3>Asesoramiento</h3>
           <p>
@@ -118,13 +118,13 @@
           </p>
         </div>
       </article>
-      <article class="boton-inicio"><a href="index.html#Inicio">🔼 Inicio</a></article>
+      <article class="boton-inicio"><a href="index.html#inicio">🔼 Inicio</a></article>
     </section>
 
-    <section id="Contacto"> <!--Última de las 4 secciones en index.html-->
+    <section id="contacto"> <!--Última de las 4 secciones en index.html-->
       <h2>Contacto</h2>
       <article class="contactoMedia">
-        <div class="Contacto-hijo"><h3>Visitanos</h3>
+        <div class="contacto-hijo"><h3>Visitanos</h3>
           <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1731.1720661798417!2d-58.086180077183755!3d-29.796600838137614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945293f97b02061f%3A0x62c03f01755dbcb0!2sLa%20Chichy%20Vivero%20y%20Tienda%20de%20Jardiner%C3%ADa!5e0!3m2!1ses-419!2sar!4v1666610713368!5m2!1ses-419!2sar"
           width="300"
@@ -135,11 +135,11 @@
           referrerpolicy="no-referrer-when-downgrade">
           </iframe>
         </div>
-        <div class="Contacto-hijo">
+        <div class="contacto-hijo">
           <h3>Seguinos</h3>
           <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3Dpfbid02HLcLbDzcHS3CLxNiQAaP8pVETULXkY4xoXprgDgTxNyL3TqhVvDLau5TqfAQTuujl%26id%3D100076292104306&show_text=true&width=500" width="300" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         </div>
-        <div class="Contacto-hijo">
+        <div class="contacto-hijo">
           <h3>Escribinos</h4>
            <!-- https://formsubmit.co/ es un servicio gratuito de gestión de formularios web. La información que usuarios colocan la dirige al mail que se especifica, en este caso a mi mail personal de la siguiente línea-->
           <form action="https://formsubmit.co/arielarbelo@hotmail.com" method="POST">
@@ -177,16 +177,16 @@
           </span>
         </div>
       </article>
-      <article class="boton-inicio"><a href="index.html#Inicio">🔼 Inicio</a></article>
+      <article class="boton-inicio"><a href="index.html#inicio">🔼 Inicio</a></article>
     </section>
 
   <footer class="navbar" align-items="center"> <!--Footer estándar para todas las páginas-->
       <ul>
-        <li class="nav-item active"><a href="index.html#Inicio">Inicio</a></li>
-        <li class="nav-item"><a href="index.html#Vivero">Vivero</a></li>
-        <li class="nav-item"><a href="index.html#Tienda">Tienda</a></li>
-        <li class="nav-item"><a href="index.html#Servicios">Servicios</a></li>
-        <li class="nav-item"><a href="index.html#Contacto">Contacto</a></li>
+        <li class="nav-item active"><a href="index.html#inicio">Inicio</a></li>
+        <li class="nav-item"><a href="index.html#vivero">Vivero</a></li>
+        <li class="nav-item"><a href="index.html#tienda">Tienda</a></li>
+        <li class="nav-item"><a href="index.html#servicios">Servicios</a></li>
+        <li class="nav-item"><a href="index.html#contacto">Contacto</a></li>
       </ul>
       <span>Ruta 119, km. 32.2, C.P.: 3460 | Curuzú Cuatiá, Corrientes, Argentina. <br>2023 Vivero La Chichy. All Rights Reserved </span>
     </footer>
