--- a/tienda.html
+++ b/tienda.html
@@ -24,18 +24,18 @@
     <nav class="navbar"> <!--Menú de navegación - mismo navbar de index.html. Los links vuelven a contenidos internos del index.html vía ID-->
       <input type="checkbox" id="check-menu">
       <label for="check-menu" class="menu"><i class='bx bx-menu bx-border'></i></label>
-      <img src="media/logo.PNG" width="70">
+      <img src="media/logo1.PNG" width="70">
       <ul>
-        <li class="nav-item active"><a href="index.html#Inicio">Inicio</a></li>
-        <li class="nav-item"><a href="index.html#Vivero">Vivero</a></li>
-        <li class="nav-item"><a href="index.html#Tienda">Tienda</a></li>
-        <li class="nav-item"><a href="index.html#Servicios">Servicios</a></li>
-        <li class="nav-item"><a href="index.html#Contacto">Contacto</a></li>
+        <li class="nav-item active"><a href="index.html#inicio">Inicio</a></li>
+        <li class="nav-item"><a href="index.html#vivero">Vivero</a></li>
+        <li class="nav-item"><a href="index.html#tienda">Tienda</a></li>
+        <li class="nav-item"><a href="index.html#servicios">Servicios</a></li>
+        <li class="nav-item"><a href="index.html#contacto">Contacto</a></li>
       </ul>
     </nav>
   
     <main class="container-fluid"> <!--contenedor del grid-->
-      <section id="Tienda" class="row">
+      <section id="tienda" class="row">
         <h2 class="col col-md-12"><b>Tienda</b></h2>
       </section>
     
@@ -118,11 +118,11 @@
   
     <footer class="navbar" align-items="center"> <!--Footer estándar para todas las páginas-->
       <ul>
-        <li class="nav-item active"><a href="index.html#Inicio">Inicio</a></li>
-        <li class="nav-item"><a href="index.html#Vivero">Vivero</a></li>
-        <li class="nav-item"><a href="index.html#Tienda">Tienda</a></li>
-        <li class="nav-item"><a href="index.html#Servicios">Servicios</a></li>
-        <li class="nav-item"><a href="index.html#Contacto">Contacto</a></li>
+        <li class="nav-item active"><a href="index.html#inicio">Inicio</a></li>
+        <li class="nav-item"><a href="index.html#vivero">Vivero</a></li>
+        <li class="nav-item"><a href="index.html#tienda">Tienda</a></li>
+        <li class="nav-item"><a href="index.html#servicios">Servicios</a></li>
+        <li class="nav-item"><a href="index.html#contacto">Contacto</a></li>
       </ul>
       <span>Ruta 119, km. 32.2, C.P.: 3460 | Curuzú Cuatiá, Corrientes, Argentina. <br>2023 Vivero La Chichy. All Rights Reserved </C></span>
     </footer>
