--- a/vivero.html
+++ b/vivero.html
@@ -23,21 +23,22 @@
   <body>
     <nav class="navbar"> <!--Menú de navegación - mismo navbar de index.html. Los links vuelven a contenidos internos del index.html vía ID-->
       <input type="checkbox" id="check-menu">
-      <label for="check-menu" class="menu"><i class='bx bx-menu bx-border'></i></label><img src="media/logo.PNG" width="70" />
+      <label for="check-menu" class="menu"><i class='bx bx-menu bx-border'></i></label><img src="media/logo1.PNG" width="70" />
       <ul>
-        <li class="nav-item active"><a href="index.html#Inicio">Inicio</a></li>
-        <li class="nav-item"><a href="index.html#Vivero">Vivero</a></li>
-        <li class="nav-item"><a href="index.html#Tienda">Tienda</a></li>
-        <li class="nav-item"><a href="index.html#Servicios">Servicios</a></li>
-        <li class="nav-item"><a href="index.html#Contacto">Contacto</a></li>
+        <li class="nav-item active"><a href="index.html#inicio">Inicio</a></li>
+        <li class="nav-item"><a href="index.html#vivero">Vivero</a></li>
+        <li class="nav-item"><a href="index.html#tienda">Tienda</a></li>
+        <li class="nav-item"><a href="index.html#servicios">Servicios</a></li>
+        <li class="nav-item"><a href="index.html#contacto">Contacto</a></li>
       </ul>
     </nav>
   
     <main class="grid-container"> <!--contenedor del grid-->
-      <header id="Vivero">
-          <h2>Vivero</h2>
-      <p>Encontrá todas las variedades de <b>plantas tanto para exterior como interior</b> de tu hogar</p>
-      <p class="aviso"><b>IMPORTANTE:</b> Los productos detallados en esta sección no se encuentran disponibles para venta online. Solo se ofrecen para compra presencial en el vivero. Puedes consultar por disponibilidad a través de nuestros canales de contacto.</p>
+      
+      <header id="vivero">
+        <h2>Vivero</h2>
+        <p>Encontrá todas las variedades de <b>plantas tanto para exterior como interior</b> de tu hogar</p>
+        <p class="aviso"><b>IMPORTANTE:</b> Los productos detallados en esta sección no se encuentran disponibles para venta online. Solo se ofrecen para compra presencial en el vivero. Puedes consultar por disponibilidad a través de nuestros canales de contacto.</p>
       </header>
   
       <div id="plantas-de-interior" class="grid-item">
@@ -87,11 +88,11 @@
   
     <footer class="navbar" align-items="center"> <!--Footer estándar para todas las páginas-->
       <ul>
-        <li class="nav-item active"><a href="index.html#Inicio">Inicio</a></li>
-        <li class="nav-item"><a href="index.html#Vivero">Vivero</a></li>
-        <li class="nav-item"><a href="index.html#Tienda">Tienda</a></li>
-        <li class="nav-item"><a href="index.html#Servicios">Servicios</a></li>
-        <li class="nav-item"><a href="index.html#Contacto">Contacto</a></li>
+        <li class="nav-item active"><a href="index.html#inicio">Inicio</a></li>
+        <li class="nav-item"><a href="index.html#vivero">Vivero</a></li>
+        <li class="nav-item"><a href="index.html#tienda">Tienda</a></li>
+        <li class="nav-item"><a href="index.html#servicios">Servicios</a></li>
+        <li class="nav-item"><a href="index.html#contacto">Contacto</a></li>
       </ul>
       <span>Ruta 119, km. 32.2, C.P.: 3460 | Curuzú Cuatiá, Corrientes, Argentina. <br>2023 Vivero La Chichy. All Rights Reserved </C></span>
     </footer>
