--- a/vivero.html
+++ b/vivero.html
@@ -17,6 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,700;1,300;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css"/>
     <link rel="stylesheet" href="css/viverogrid.css"/>
+    <link rel="stylesheet" href="css/queries.css">
     <title>La Chichy | Vivero</title>
   </head>
 
@@ -37,18 +38,18 @@
       
       <header id="vivero">
         <h2>Vivero</h2>
-        <p>Encontrá todas las variedades de <b>plantas tanto para exterior como interior</b> de tu hogar</p>
-        <p class="aviso"><b>IMPORTANTE:</b> Los productos detallados en esta sección no se encuentran disponibles para venta online. Solo se ofrecen para compra presencial en el vivero. Puedes consultar por disponibilidad a través de nuestros canales de contacto.</p>
+        <p class="introvivero">Encontrá todas las <b>variedades de plantas</b> tanto para <b>exterior como interior</b> de tu hogar</p>
+        <div class="aviso"><b>IMPORTANTE:</b> Los productos detallados en esta sección no se encuentran disponibles para venta online. Solo se ofrecen para compra presencial en el vivero. Puedes consultar por disponibilidad a través de nuestros canales de contacto.</div>
       </header>
   
-      <div id="plantas-de-interior" class="grid-item">
+      <div id="plantas-de-interior" class="grid-item grey white">
         <h3><b>Plantas de interior</b></h3>
         <ul type="circle">
           <p>Aguaribay | Acacia Carnaval | Almanda | Areka | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos | guaribay | Acacia Carnaval | Almanda | Areka | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos | guaribay | Acacia Carnaval | Almanda | Areka | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos</p>
         </ul>
         <img class="img-grid" src="media/plantas interior.jpg" alt="plantas interior">
       </div>
-      <div id="plantas-de-exterior" class="grid-item">
+      <div id="plantas-de-exterior" class="grid-item lightgrey black">
         <h3><b>Plantas de exterior</b></h3>
         <span>
             <p>Mandarina encore | Murcot | Bromelia Guzmania | Naranja dulce valenciana | Pomelo star ruby | Pomelo march | Limon | Mandarina encore | Murcot | Bromelia Guzmania | Naranja dulce valenciana | Pomelo star ruby | Pomelo march | Limon | Mandarina encore | Murcot | Bromelia Guzmania | Naranja dulce valenciana | Pomelo star ruby | Pomelo march | Limon</p>
@@ -58,7 +59,7 @@
         </span>
       </div>
 
-      <div id="semillas-y-plantines" class="grid-item">
+      <div id="semillas-y-plantines" class="grid-item pink black">
         <h3>Semillas y plantines</h3>
         <p>Si querés hacer tu propia huerta en casa, o querés sumar variedades a la
           que tenés, <b>te ofrecemos una amplia variedad de semillas y plantines:</b>
@@ -75,7 +76,7 @@
         </span>
       </div>
     
-      <div id="fertilizantes-y-otro-insumos" class="grid-item">
+      <div id="fertilizantes-y-otro-insumos" class="grid-item grey white">
         <h3>Fertilizantes y otros insumos</h3>
         <p>Somos distribuidores oficiales de <b>las mejores marcas en fertilizantes e insumos para alto rendimiento de los suelos.</b> Te presentamos sus productos principales:
         <br><br>Fertilizantes inorgánicos.
