--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
 
     <section id="vivero"> <!-- Primera de las 4 secciones en index.html - Sus links dirigen a la página vivero.html y a IDs dentro de esta página -->
       <h2><a href="vivero.html">Vivero</a></h2>
-      <article>
+      <article class="viverodiv">
         <div>
           <a href="vivero.html#plantas-de-interior"><img src="media/plantas interior.jpg" alt="plantas-de-interior" class="imagenCategorias" data-aos="fade-right"/></a>
           <h3><a href="vivero.html#plantas-de-interior">Plantas de interior</a></h3>
           <a href="vivero.html#plantas-de-exterior"><img src="media/plantas exterior.jpg" alt="plantas-de-exterior" class="imagenCategorias" data-aos="fade-right"/></a>
           <h3><a href="vivero.html#plantas-de-exterior">Plantas de exterior</a></h3>
         </div>
-        <div>
+        <div class="viverodiv2">
           <a href="vivero.html#semillas-y-plantines"><img src="media/semillas y plantines.jpeg" alt="semillas-y-plantines" class="imagenCategorias" data-aos="fade-left"/></a>
           <h3><a href="vivero.html#semillas-y-plantines">Semillas y plantines</a></h3>
           <a href="vivero.html#fertilizantes-y-otro-insumos"><img src="media/fertilizantes y otros insumos.jpg" alt="fertilizantes-y-otros-insumos" class="imagenCategorias" data-aos="fade-left"/></a>
@@ -83,13 +83,13 @@
 
     <section id="tienda"> <!--Segunda de las 4 secciones en index.html - Sus links dirigen a la página tienda.html y a IDs dentro de esta página -->
       <h2><a href="tienda.html">Tienda</a></h2>
-      <article>
+      <article class="viverodiv">
         <div>
-          <a data-aos="fade-left" href="tienda.html#decoracion"><img src="media/decoracion.jpg" alt="decoracion" class="imagenCategorias"/></a>
+          <a href="tienda.html#decoracion"><img src="media/decoracion.jpg" alt="decoracion" class="imagenCategorias" data-aos="fade-right"/></a>
           <h3><a href="tienda.html#decoracion">Decoración</a></h3>
         </div> 
-        <div>
-          <a data-aos="fade-right" href="tienda.html#herramientas"><img src="media/herramientas.jpg" alt="herramientas" class="imagenCategorias"/></a>
+        <div class="viverodiv2">
+          <a href="tienda.html#herramientas"><img src="media/herramientas.jpg" alt="herramientas" class="imagenCategorias" data-aos="fade-left"/></a>
           <h3><a href="tienda.html#herramientas">Herramientas</h3></a>
         </div>
       </article>
@@ -143,7 +143,7 @@
           <h3>Seguinos</h3>
           <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3Dpfbid02HLcLbDzcHS3CLxNiQAaP8pVETULXkY4xoXprgDgTxNyL3TqhVvDLau5TqfAQTuujl%26id%3D100076292104306&show_text=true&width=500" width="300" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         </div>
-        <div class="contacto-hijo">
+        <div class="contacto-hijo contacto-form">
           <h3>Escribinos</h4>
            <!-- https://formsubmit.co/ es un servicio gratuito de gestión de formularios web. La información que usuarios colocan la dirige al mail que se especifica, en este caso a mi mail personal de la siguiente línea-->
           <form action="https://formsubmit.co/arielarbelo@hotmail.com" method="POST">
