--- a/vivero.html
+++ b/vivero.html
@@ -27,8 +27,8 @@
       <label for="check-menu" class="menu"><i class='bx bx-menu bx-border'></i></label><img src="media/logo1.PNG" width="70" />
       <ul>
         <li class="nav-item active"><a href="index.html#inicio">Inicio</a></li>
-        <li class="nav-item"><a href="index.html#vivero">Vivero</a></li>
-        <li class="nav-item"><a href="index.html#tienda">Tienda</a></li>
+        <li class="nav-item"><a href="vivero.html">Vivero</a></li>
+        <li class="nav-item"><a href="tienda.html">Tienda</a></li>
         <li class="nav-item"><a href="index.html#servicios">Servicios</a></li>
         <li class="nav-item"><a href="index.html#contacto">Contacto</a></li>
       </ul>
