--- a/ecommerce.html
+++ b/ecommerce.html
@@ -8,7 +8,7 @@
     content="Ingresá a nuestra tienda online y descubrí nuestra amplia variedad de artículos para tu jardín. Envíos a domicilio a todo el país."/>
     <meta name="keywords"
     content="tienda de jardineria, tienda online, ecommerce, Corrientes, Curuzu Cuatia, Macetas, Macetas de cemento, macetas de plástico, macetas de terracota, macetas impresas en 3D, Luminarias, tiras de luces, antorchas, luces directas, luces indirectas, Decoración, Herramientas."/>
-    <link rel="icon" href="Media/Logo.PNG" />
+    <link rel="icon" href="Media/logo1.PNG" />
     <!-- <link rel="stylesheet" href="css/bootstrap.css"> -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
