--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
       <h2><a href="vivero.html">Vivero</a></h2>
       <article class="viverodiv">
         <div>
-          <a href="vivero.html#plantas-de-interior"><img src="media/plantas interior.jpg" alt="plantas-de-interior" class="imagenCategorias" data-aos="fade-right"/></a>
+          <a href="vivero.html#plantas-de-interior"><img src="media/plantas interior.jpg" alt="plantas-de-interior" class="imagenCategorias" data-aos="fade-up"/></a>
           <h3><a href="vivero.html#plantas-de-interior">Plantas de interior</a></h3>
-          <a href="vivero.html#plantas-de-exterior"><img src="media/plantas exterior.jpg" alt="plantas-de-exterior" class="imagenCategorias" data-aos="fade-right"/></a>
+          <a href="vivero.html#plantas-de-exterior"><img src="media/plantas exterior.jpg" alt="plantas-de-exterior" class="imagenCategorias" data-aos="fade-up"/></a>
           <h3><a href="vivero.html#plantas-de-exterior">Plantas de exterior</a></h3>
         </div>
         <div class="viverodiv2">
-          <a href="vivero.html#semillas-y-plantines"><img src="media/semillas y plantines.jpeg" alt="semillas-y-plantines" class="imagenCategorias" data-aos="fade-left"/></a>
+          <a href="vivero.html#semillas-y-plantines"><img src="media/semillas y plantines.jpeg" alt="semillas-y-plantines" class="imagenCategorias" data-aos="fade-up"/></a>
           <h3><a href="vivero.html#semillas-y-plantines">Semillas y plantines</a></h3>
-          <a href="vivero.html#fertilizantes-y-otro-insumos"><img src="media/fertilizantes y otros insumos.jpg" alt="fertilizantes-y-otros-insumos" class="imagenCategorias" data-aos="fade-left"/></a>
+          <a href="vivero.html#fertilizantes-y-otro-insumos"><img src="media/fertilizantes y otros insumos.jpg" alt="fertilizantes-y-otros-insumos" class="imagenCategorias" data-aos="fade-up"/></a>
           <h3><a href="vivero.html#fertilizantes-y-otro-insumos">Fertilizantes y otros insumos</a></h3>
         </div>
       </article>
@@ -92,6 +92,7 @@
           <a href="tienda.html#herramientas"><img src="media/herramientas.jpg" alt="herramientas" class="imagenCategorias" data-aos="fade-left"/></a>
           <h3><a href="tienda.html#herramientas">Herramientas</h3></a>
         </div>
+        
       </article>
       <article class="boton-inicio"><a href="index.html#inicio">🔼 Inicio</a></article>
     </section>
@@ -177,6 +178,7 @@
           </form>
           <br>
           <span class="contacto-whatsapp">
+            <p><b>Whatsapp:</b></p>
             <a href="https://wa.me/00543774442756"><img src="media/logo whatsapp.jpg" alt="logo de whatsapp" width="20"> <b> +5493774442756</b></a>
           </span>
         </div>
