--- a/vivero.html
+++ b/vivero.html
@@ -45,7 +45,7 @@
       <div id="plantas-de-interior" class="grid-item grey white">
         <h3><b>Plantas de interior</b></h3>
         <ul type="circle">
-          <p>Aguaribay | Acacia Carnaval | Almanda | Areka | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos | guaribay | Acacia Carnaval | Almanda | Areka | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos | guaribay | Acacia Carnaval | Almanda | Areka | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos</p>
+          <p>Aguaribay | Acacia Carnaval | Almanda | Areca | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos | guaribay | Acacia Carnaval | Almanda | Areca | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos | guaribay | Acacia Carnaval | Almanda | Areca | Azalea simple | Azarero disciplinado | Buxus | Calistemus limpiatubos</p>
         </ul>
         <img class="img-grid" src="media/plantas interior.jpg" alt="plantas interior">
       </div>
@@ -59,7 +59,7 @@
         </span>
       </div>
 
-      <div id="semillas-y-plantines" class="grid-item pink black">
+      <div id="semillas-y-plantines" class="grid-item grey white">
         <h3>Semillas y plantines</h3>
         <p>Si querés hacer tu propia huerta en casa, o querés sumar variedades a la
           que tenés, <b>te ofrecemos una amplia variedad de semillas y plantines:</b>
@@ -76,7 +76,7 @@
         </span>
       </div>
     
-      <div id="fertilizantes-y-otro-insumos" class="grid-item grey white">
+      <div id="fertilizantes-y-otro-insumos" class="grid-item pink black">
         <h3>Fertilizantes y otros insumos</h3>
         <p>Somos distribuidores oficiales de <b>las mejores marcas en fertilizantes e insumos para alto rendimiento de los suelos.</b> Te presentamos sus productos principales:
         <br><br>Fertilizantes inorgánicos.
