--- a/ecommerce.html
+++ b/ecommerce.html
@@ -23,9 +23,7 @@
     <nav class="navbar">
       <!--Menú de navegación - mismo navbar de index.html. Los links vuelven a contenidos internos del index.html vía ID-->
       <input type="checkbox" id="check-menu" />
-      <label for="check-menu" class="menu"
-        ><i class="bx bx-menu bx-border"></i></label
-      ><img src="Media/logo1.PNG" width="70" />
+      <label for="check-menu" class="menu"><i class="bx bx-menu bx-border"></i></label><img src="media/logo1.PNG" width="70" />
       <ul>
         <li class="nav-item active"><a href="index.html#inicio">Inicio</a></li>
         <li class="nav-item"><a href="vivero.html">Vivero</a></li>
@@ -58,7 +56,7 @@
       <div class="container">
           <h4 id="macetasDeCemento"> Macetas de Cemento</h4>
           <article class="row">
-            <div class="card" data-aos="fade-up" style="width: 18rem;">
+            <div class="card" style="width: 18rem;">
               <img src="media/macetas1.jpg" class="card-img-top" alt="Maceta de cemento">
               <div class="card-body">
                 <h5 class="card-title">Maceta de cemento 1</h5>
@@ -67,7 +65,7 @@
               </div>
             </div>
     
-            <div class="card" data-aos="fade-up" style="width: 18rem;">
+            <div class="card" style="width: 18rem;">
               <img src="media/macetas1.jpg" class="card-img-top" alt="Maceta de cemento">
               <div class="card-body">
                 <h5 class="card-title">Maceta de cemento 2</h5>
